# ExamEngine

./: .dockerignore  .env  .env.example  .gitignore  README.md  TESTING.md  build-and-push.sh  docker-compose.yml  nginx.conf  package-lock.json  package.json
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.dev  dev.db  pyproject.toml  requirements.backup.txt  requirements.txt  ruff.toml
backend/script/: add_admin.py  add_course_merges_column.py  add_course_merges_column.sql  init_localstack.sh
backend/src/: main.py
backend/src/algorithms/: create_schedule.py  dsatur_graph.py  dsatur_scheduler.py  dsatur_scheduling.py  enhanced_dsatur_scheduler.py  original_dsatur_scheduler.py  scheduler.py
backend/src/api/: deps.py
backend/src/api/routes/: __init__.py  admin.py  auth.py  datasets.py  schedule.py
backend/src/core/: config.py  database.py  exceptions.py
backend/src/core/algorithms/: graph.py
backend/src/domain/: adapters.py  constants.py  exceptions.py  models.py
backend/src/domain/adapters/: __init__.py  csv_adapters.py  schemas.py  schemas_detector.py
backend/src/domain/assemblers/: __init__.py  conflict_assembler.py  schedule_assembler.py
backend/src/domain/factories/: __init__.py  dataset_factory.py
backend/src/domain/models/: __init__.py  course.py  dataset.py  enrollment.py  exam_assignment.py  room.py  scheduling_dataset.py  student.py  time_slot.py
backend/src/domain/services/: conflict_detector.py  conflict_formatter.py  constraint_evaluator.py  dataset_builder.py  response_builder.py  schedule_analyzer.py  scheduler.py
backend/src/domain/value_objects/: __init__.py  conflict.py  hard_conflicts.py  schedule_analysis.py  schedule_permissions.py  schedule_statistics.py  scheduling_config.py  scheduling_state.py  soft_conflicts.py  soft_penalty.py
backend/src/repo/: base.py  conflict.py  conflict_analyses.py  course.py  dataset.py  exam_assignment.py  room.py  run.py  schedule.py  schedule_share.py  student.py  time_slot.py  user.py
backend/src/schemas/: db.py  reset_database.py
backend/src/services/: auth.py  dataset.py  s3_client.py  schedule.py  storage.py  validation.py
backend/src/services/dataset/: __init__.py  merge_validator.py  service.py
backend/src/services/schedule/: __init__.py  permissions.py  (+1 more)
backend/src/utils/: email.py  password.py
backend/tests/: README.md  comprehensive_conflict_test.py  conftest.py  diagnose_conflicts.py  master_validation.py  quick_test_large_courses.py  run_tests.py  test_conflict_detection.py  test_database_schema.py  test_dsatur.py  test_enhanced_dsatur_algorithm.py  test_large_course_placement.py  test_master_validation.py  test_merge_validator.py  test_original_algorithm.py  test_schedule_by_student_long.csv  test_scheduler.py  test_simple_models.py  test_summary_generation.py  verify_conflict_detection.py
backend/tests/algorithms/: test_enhanced_dsatur_algorithm.py  test_large_course_prioritization.py
backend/tests/core/: test_config.py
backend/tests/database/: __init__.py  test_conflict_analysis_storage.py
backend/tests/repo/: test_base.py  test_conflict_analyses.py  test_course.py
backend/tests/test_core/: test_config.py
(+154 files in other folders)
